5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4153/executions/1758_1185.log
== TEST (2019-05-27 13:27:32) 
-- CODE:
from numpy import *

v = array(eval(input("Insira um vetor de inteiros: ")))

i = 0
x = 0
while(i < size(v)):
	if(v[i] > 99):
		print(i)
		x = x + 1
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 13:28:06) 
-- CODE:
from numpy import *

v = array(eval(input("Insira um vetor de inteiros: ")))

i = 0
x = 0
while(i < size(v)):
	if(v[i] > 99):
		print(i)
		x = x + 1
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 13:29:51) 
-- CODE:
from numpy import *

v = array(eval(input("Insira um vetor de inteiros: "))
i = 0
x = 0
while(i < size(v)):
	if(v[i] > 99):
		x = x + 1
print(x)
-- ERROR:
File "XXXX", line 4
    i = 0
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 13:30:20) 
-- CODE:
from numpy import *

v = array(eval(input("Insira um vetor de inteiros: "))
i = 0
x = 0
while(i < size(v)):
	if(v[i] > 99):
		x = x + 1
print(x)
-- ERROR:
File "XXXX", line 4
    i = 0
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 13:30:30) 
-- CODE:
from numpy import *

v = array(eval(input("Insira um vetor de inteiros: "))
i = 0
x = 0
while(i < size(v)):
	if(v[i] > 99):
		x = x + 1
print(x)
-- ERROR:
File "XXXX", line 4
    i = 0
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 13:32:22) 
-- CODE:
from numpy import *

v = array(eval(input("Indhavs: ")))
i = 0
x = 0
while(i < size(v)):
	if(v[i] > 99):
		print(v[i])
		x = x + 1
	i = i + 1
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 13:33:24) 
-- CODE:
from numpy import *

v = array(eval(input("Indhavs: ")))
i = 0
x = 0
while(i < size(v)):
	if(v[i] > 99):
		print(i)
		x = x + 1
	i = i + 1
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-27 13:33:26) 
-- CODE:
from numpy import *

v = array(eval(input("Indhavs: ")))
i = 0
x = 0
while(i < size(v)):
	if(v[i] > 99):
		print(i)
		x = x + 1
	i = i + 1
print(x)
-- EXECUTION TIME:
0.910031
-- TEST CASE 1:
---- input:
[101,89,105,88,104,87]
---- correct output:
0
2
4
3
---- user output:
0
2
4
3
-- TEST CASE 2:
---- input:
[88,100,105,107,100,108,110,99,98,100]
---- correct output:
1
2
3
4
5
6
9
7
---- user output:
1
2
3
4
5
6
9
7
-- TEST CASE 3:
---- input:
[99,98,98,99,98,97]
---- correct output:
0
---- user output:
0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-27 13:33:26) 
-- CODE:
from numpy import *

v = array(eval(input("Indhavs: ")))
i = 0
x = 0
while(i < size(v)):
	if(v[i] > 99):
		print(i)
		x = x + 1
	i = i + 1
print(x)
-- EXECUTION TIME:
1.04611
-- TEST CASE 1:
---- input:
[101,89,105,88,104,87]
---- correct output:
0
2
4
3
---- user output:
0
2
4
3
-- TEST CASE 2:
---- input:
[88,100,105,107,100,108,110,99,98,100]
---- correct output:
1
2
3
4
5
6
9
7
---- user output:
1
2
3
4
5
6
9
7
-- TEST CASE 3:
---- input:
[99,98,98,99,98,97]
---- correct output:
0
---- user output:
0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
